--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
 <body>
     <div class="container">
         <div class="cuerpo">
-            <div class="logo">
+            <div class="logo desk">
                 <img src="assets/img/logo.svg" alt="Logo Breath Happi">
+            </div>
+            <div class="logo mov">
+                <img src="assets/img/icon.svg" alt="Logo Breath Happi">
             </div>
             <div class="body">
                 <p>We picture a world with cleaner air, <br>in every room of every home. We are committed to reimagining the future of air purification<br>through proven scientific research,<br>delivering cost-effective sanitization solutions that <br>are affordable for most families.</p>
             </div>
             <form action="https://formspree.io/xpzyeqdq" method="POST">
-                <input placeholder="Subscibe for updates" type="email" name="_replyto">
-                <input type="submit" value="Keep me posted">
+                <input class="email" placeholder="Subscibe for updates" type="email" name="_replyto">
+                <input class="submit" type="submit" value="Keep me posted">
               </form>
+              <div class="social">
+                  <a target="_blank" href="https://www.facebook.com/breathehappi">
+                    <img src="assets/img/facebook.svg" alt="Facebook Link">
+                  </a>
+                  <a target="_blank" href="https://twitter.com/breathehappi">
+                    <img src="assets/img/twitter.svg" alt="Twitter Link">
+                  </a>
+                  <a target="_blank" href="https://www.instagram.com/breathehappi/">
+                    <img src="assets//img/instagram.svg" alt="Instagram Link">
+                  </a>
+              </div>
         </div>
     </div>
     
