--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
                 <img src="assets/img/logo.svg" alt="Logo Breath Happi">
             </div>
             <div class="logo mov">
-                <img src="assets/img/icon.svg" alt="Logo Breath Happi">
+                <img src="assets/img/icon.png" alt="Logo Breath Happi">
             </div>
-            <div class="body">
-                <p>We picture a world with cleaner air, <br>in every room of every home. We are committed to reimagining the future of air purification<br>through proven scientific research,<br>delivering cost-effective sanitization solutions that <br>are affordable for most families.</p>
+            <div class="body desk">
+                <p>We picture a world with cleaner air, <br>in every room of every home. We are committed to reimagining the future of air purification<br>through proven scientific research,<br>delivering cost-effective purifying solutions that <br>fit your lifestyle.</p>
+            </div>
+            <div class="body mov">
+                <p>We picture a world with cleaner air, in every room of every home. We are committed to reimagining the future of air purificationthrough proven scientific research, delivering cost-effective purifying solutions that fit your lifestyle.</p>
             </div>
             <form action="https://formspree.io/xpzyeqdq" method="POST">
                 <input class="email" placeholder="Subscibe for updates" type="email" name="_replyto">
